--- a/index.html
+++ b/index.html
@@ -59,8 +59,14 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 4rem;
             box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+            overflow: hidden;
+        }
+        
+        .app-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
         
         .features {
@@ -189,7 +195,9 @@
 <body>
     <header>
         <div class="container">
-            <div class="app-icon">🎙️</div>
+            <div class="app-icon">
+                <img src="VoiceInk-ios/Assets.xcassets/AppIcon.appiconset/120.png" alt="VoiceInk App Icon">
+            </div>
             <h1>VoiceInk</h1>
             <p>Transform Your Voice into Text</p>
         </div>
@@ -268,7 +276,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 VoiceInk. Made with ❤️ for voice-to-text enthusiasts.</p>
+            <p>&copy; 2025 VoiceInk. Made with PAX packs.</p>
             <p style="margin-top: 0.5rem;">
                 Contact: <a href="mailto:prakashjoshipax@gmail.com" style="color: #3498db;">prakashjoshipax@gmail.com</a>
             </p>
