Add support on home page

--- a/index.html
+++ b/index.html
@@ -266,10 +266,12 @@
 
     <section class="privacy-section">
         <div class="container">
-            <h3>Your Privacy Matters</h3>
-            <p>We're committed to protecting your privacy. Read our comprehensive privacy policy to learn how we handle your data.</p>
+            <h3>Support & Privacy</h3>
+            <p>We're committed to protecting your privacy and providing you with the help you need.</p>
             <p style="margin-top: 1rem;">
                 <a href="PRIVACY.html" class="privacy-link">View Privacy Policy</a>
+                <span style="margin: 0 10px;">|</span>
+                <a href="SUPPORT.html" class="privacy-link">Get Support</a>
             </p>
         </div>
     </section>
