--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 VoiceInk. Made with PAX packs.</p>
+            <p>&copy; 2025 VoiceInk. Made with ❤️ by Pax.</p>
             <p style="margin-top: 0.5rem;">
                 Contact: <a href="mailto:prakashjoshipax@gmail.com" style="color: #3498db;">prakashjoshipax@gmail.com</a>
             </p>
